# 021-348

./: main.py  pyproject.toml  requirements.txt
input/: 只有表头.xlsx  空表格.xlsx  缺少状态列.xlsx  边界测试_2024-01_问题清单_20260621_084308.xlsx  项目A_2024-01_台账汇总_20260621_083206.xlsx  项目A_2024-01_台账汇总_20260621_084235.xlsx  项目A_2024-01_问题清单_20260621_083154.xlsx  项目A_2024-01_问题清单_20260621_084222.xlsx  项目A_台账1.xlsx  项目A_台账2.xlsx
src/ledger_cleaner/: cli.py  config.py  models.py  reader.py  report.py  summarizer.py  validator.py
